--- a/source/assets/stylesheets/locastyle/base/_reset.sass
+++ b/source/assets/stylesheets/locastyle/base/_reset.sass
@@ -16,15 +16,16 @@ html
 html,
 body
   height: 100%
+  overflow-x: hidden
 
 body
   font-size: 100%
   line-height: 1
   font-family: Open Sans, Arial, Helvetica, Sans-serif
-  overflow: auto
-
-  .ls-screen-lg &
-    overflow: hidden
+  -webkit-overflow-scrolling: touch
+  -moz-overflow-scrolling: touch
+  -ms-overflow-scrolling: touch
+  overflow-scrolling: touch
 
 .container-white
   @extend .ls-clearfix
