--- a/source/assets/stylesheets/locastyle/modules/_notification.sass
+++ b/source/assets/stylesheets/locastyle/modules/_notification.sass
@@ -1,6 +1,4 @@
 .ls-notification
-  +single-transition(transform, .5s)
-  +translate(50%, 0)
   background: #222
   width: $sidebar-width
   position: fixed
@@ -8,15 +6,6 @@
   top: 0
   height: 100%
   z-index: -1
-
-  .ls-notifications-visible &
-    +translate(0, 0)
-    overflow: auto
-    -webkit-overflow-scrolling: touch
-    -moz-overflow-scrolling: touch
-    -ms-overflow-scrolling: touch
-    overflow-scrolling: touch
-    z-index: 1
 
   .ls-notification-list
 
